Change home page content and styling, remove unnecessary components

--- a/application/frontend/src/app/app.component.html
+++ b/application/frontend/src/app/app.component.html
@@ -31,10 +31,10 @@
           <a matLine routerLink="/add-transaction" class = "itemText">Add Transaction</a>
         </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item>
-          <a matLine routerLink="/remove-transaction" class = "itemText">Remove Transaction</a>
-        </mat-list-item>
-        <mat-divider></mat-divider>
+<!--        <mat-list-item>-->
+<!--          <a matLine routerLink="/remove-transaction" class = "itemText">Remove Transaction</a>-->
+<!--        </mat-list-item>-->
+<!--        <mat-divider></mat-divider>-->
         <mat-list-item class="logout-item" (click)="logout()">
           <span matLine class="itemText">Logout</span>
         </mat-list-item>
