--- a/application/frontend/src/app/home/home.component.css
+++ b/application/frontend/src/app/home/home.component.css
@@ -14,6 +14,7 @@
   text-align: center;
   margin: 20px auto;
   max-width: 1000px;
+  font-weight: 400;
   padding: 10px;
   background-color: #ffffff;
   border-radius: 8px;
