--- a/application/frontend/src/app/home/home.component.html
+++ b/application/frontend/src/app/home/home.component.html
@@ -1,7 +1,10 @@
 <div class="homeContainer">
   <h2 class="homeTitle">Home Page</h2>
   <p class="homeParagraph">
-    Welcome to the home page of the Cliq Payment Transactions app! <br>In the "Transactions" page above, you can choose to view all the transactions or filter them via alias. <br>
-    In the "Add Transaction" page, you can fill out a form to add a new transaction.
+    Welcome to the home page of the Cliq Payment Transactions app! <br><br>
+    In the <b>"Incoming Transactions"</b> page, you can see all saved transactions where you are the creditor.<br><br>
+    Similarly, the <b>"Outgoing Transactions"</b> page will show you all transactions where you are the debtor.<br><br>
+    In the <b>"Add Transaction"</b> page, you can fill out a form to add a new transaction.<br><br>
+    You will need to log in to access these pages. If you are not logged in, you will be redirected to the login page.<br>
   </p>
 </div>
